2005-07-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/history.c: Removed old comments.

2005-07-31  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/plot.c: #include gpexecute.h for OS/2 without USE_MOUSE.

	* src/show.c (show_version): Correct spelling error HIDDEN3D_GRDBOX =>
	HIDDEN3D_GRIDBOX.

	* src/term.h: Fix compilation with SHORT_TERMLIST.

	* src/gplt_x11.c: Remove reference to os2/dialogs.h.

	* src/mouse.c: Use OS/2 message definition file os2/pm_msgs.h.

	* config/makefile.os2: Fix build of gplt_x11.exe on OS/2.

2005-07-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.mgw: Have HAVE_ERF, HAVE_ERFC for MingW >= 3.0.

2005-07-30  Ethan Merritt  <merritt@u.washington.edu

	* src/save.c (save_position and its callers): Move printout of the
	"offset" keyword into shared routine save_position().  That way we
	can efficiently skip the whole thing if the offset is zero.

	* src/datafile.c (df_tokenise): Add back a copy and a comment
	corresponding to the old sscanf() input code.  This makes is easy if
	someone wants to compare new and old code paths.

	* src/datafile.c (df_open): Fix mis-match of column header to
	column values in the case of `set style histogram errorbars` with
	`set key autotitle columnheader`.

2005-07-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Added missing text for a "pause -1".

2005-07-29  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gadgets.h src/graph3d.c src/graphics.c src/save.c src/set.c
	src/show.c src/tables.c src/tables.h: Revamping of key placement
	routines. Backward compatible with previous placement options but now
	there are new, more flexible options.

	  {{inside | outside} | {lmargin | rmargin | tmargin | bmargin}
	    | {at <position>}}
	  {left | right | center} {top | bottom | center}
	  {vertical | horizontal} {Left | Right}

	controlling key placement and key element arrangement.

	* docs/gnuplot.doc: Updated documentation about new key options.